Added linkedin button to signup options

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,7 +12,7 @@
   %strong never
   post to your Facebook wall without your permission.
 
-= render partial: 'authentications/options'
+= render partial: 'authentications/options', locals: { type: "signup" }
 
 %hr
 
