--- a/app/views/authentications/_options.html.haml
+++ b/app/views/authentications/_options.html.haml
@@ -1,4 +1,13 @@
 .center
+  - if type == "signup"
+    - linkedin_link = "/auth/linkedin_signup"
+  - elsif type == "signin"
+    - linkedin_link = "/auth/linkedin_signin"
+
+  %div
+    = link_to (image_tag 'auth/linkedin_64.png', alt: "Connect to LinkedIn"), linkedin_link, id: 'linkedin-connect'
+    = link_to "Connect to LinkedIn", linkedin_link, class: 'btn btn-large'
+
   %div
     = link_to (image_tag 'auth/facebook_64.png', alt: "Connect to Facebook"), '/auth/facebook', id: 'fb-connect'
     = link_to "Connect to Facebook", '/auth/facebook', :class => 'btn btn-large'
