--- a/app/views/authentications/_options.html.haml
+++ b/app/views/authentications/_options.html.haml
@@ -1,8 +1,8 @@
 .center
   - if type == "signup"
-    - linkedin_link = "/auth/linkedin_signup"
+    - linkedin_link = "/authentications/linkedin_signup"
   - elsif type == "signin"
-    - linkedin_link = "/auth/linkedin_signin"
+    - linkedin_link = "/authentications/linkedin_signin"
 
   %div
     = link_to (image_tag 'auth/linkedin_64.png', alt: "Connect to LinkedIn"), linkedin_link, id: 'linkedin-connect'
