--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,7 +1,7 @@
 @import "shared/partials";
 
 $main_comments_background_colour: #EBFFEB;
-$even_level_nested_comments_border_colour: #E6FFE6;
+$even_level_nested_comments_border_colour: #DEFFDE;
 $odd_level_nested_comments_background_colour: #E9F8FF;
 $odd_level_nested_comments_border_colour: #DFF4FF;
 
@@ -104,7 +104,7 @@ $odd_level_nested_comments_border_colour: #DFF4FF;
         //nested comments with an even depth value(eg 2,4) have same colour scheme as main comments
 
         background-color: $main_comments_background_colour;
-        @include rounded_borders($even_level_nested_comments_border_colour, 4px, 3px);
+        @include rounded_borders($even_level_nested_comments_border_colour, 4px, 10px);
 
         //padding for all nested comments
         .core { 
@@ -119,7 +119,7 @@ $odd_level_nested_comments_border_colour: #DFF4FF;
       .d1 .d3,
       .d1 .d3 .d5 {
         background-color: $odd_level_nested_comments_background_colour;
-        @include rounded_borders($odd_level_nested_comments_border_colour, 4px, 3px);
+        @include rounded_borders($odd_level_nested_comments_border_colour, 4px, 10px);
       }
 
       //only indent margin for first three levels
