--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -129,6 +129,12 @@ $odd_level_nested_comments_border_colour: #DFF4FF;
     //set font-size of all nested comments
     .d0 > .display-comments { font-size: 0.92em; }
 
+    //extra padding for top level comments
+    .d0 > .core {
+      padding: 10px;
+      padding-top: 15px;
+    }
+
 
     .errors { display: none; }
 
