--- a/app/views/discussion_post_mailer/new_comment.text.haml
+++ b/app/views/discussion_post_mailer/new_comment.text.haml
@@ -1,7 +1,7 @@
 = "Hi,"
 :plain
 
-= "#{@commenter_name} just made a comment on your discussion post: #{@comment_post_title} ( #{@comment_post_url} )"
+= "#{@commenter_name} just made a comment on your forum post: #{@comment_post_title} ( #{@comment_post_url} )"
 :plain
 
 = "Don't want to receive emails about this? Change your notification settings:"
