--- a/app/views/discussion_posts/drafts.html.haml
+++ b/app/views/discussion_posts/drafts.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  %h1 My draft discussion posts
+  %h1 My draft forum posts
 
 .alert.alert-info
   This is a place for having public discussions. If you are signed in you can
