--- a/app/views/discussion_posts/index.html.haml
+++ b/app/views/discussion_posts/index.html.haml
@@ -3,7 +3,7 @@
     .forum
       .span7
         .header
-          %h1 Discussion
+          %h1 Discussion forum
 
         - if not can? :create, DiscussionPost
           %p
