--- a/app/views/pages/dashboard.html.haml
+++ b/app/views/pages/dashboard.html.haml
@@ -29,7 +29,7 @@
             :markdown
               Book a <a href="/request-a-career-advice-session" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Get career advice', '/request-a-career-advice-session']);">career advice session</a> for one-on-one advice with one of our careers advisors. They can discuss your best options and guide you on how to choose a high impact career.
             
-              Ask a question or introduce yourself on our <a href="/discussion" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Get career advice', '/discussion']);">forum</a>
+              Ask a question or introduce yourself on our <a href="/forum" onClick="_gaq.push(['_trackEvent', 'Dashboard', 'Get career advice', '/forum']);">forum</a>
         .row.user-activity-block
           .span3
             %h2 Get a mentor
