--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -6,8 +6,8 @@
           %h1= current_user.name
           :markdown
             ##You can now:
-            ###[Ask a question on our discussion forum](/discussion)
-            Get career advice or just find out more about 80,000 Hours. People are happy to help you out. [Ask a question here](/discussion)
+            ###[Ask a question on our discussion forum](/forum)
+            Get career advice or just find out more about 80,000 Hours. People are happy to help you out. [Ask a question here](/forum)
             
           %h2 Fill in your profile
           = render 'form'
