Amended function for get_background_snippet for profile teasers

--- a/app/views/etkh_profiles/_profile_teaser.html.haml
+++ b/app/views/etkh_profiles/_profile_teaser.html.haml
@@ -27,7 +27,7 @@
           .span9
             .info
               .background
-                = markdown (user.etkh_profile.get_background_snippet(150) + "... [read more](#{etkh_profile_path(user)})")
+                = markdown (user.etkh_profile.get_background_snippet(100, 150) + "... [read more](#{etkh_profile_path(user)})")
               - if user.etkh_profile.profile_option_causes.any?
                 .causes
                   - user.etkh_profile.profile_option_causes.limit(3).each do |cause|
