--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -22,6 +22,8 @@
 #linkedin-modal {
   visibility: hidden;
   position: absolute;
+  left: 150px;
+  top: 200px;
   z-index: 101;
   background: #FFFFFF;
   border: 5px solid rgba(50,50,50,0.3);
