Added class to flash modal

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
       <% if !flash.empty?  %>
         <% count = 0 %>
         <% flash.each do |key,value| %>
-          <div class="modal" id="flash-modal-<%= count %>">
+          <div class="modal flash-modal" id="flash-modal-<%= count %>">
             <div class="modal-body alert <%= key %>">
               <%= value.html_safe %>
             </div>
