Changed design of linkedin modal

--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -25,9 +25,8 @@
   left: 150px;
   top: 200px;
   z-index: 101;
-  background: #FFFFFF;
-  border: 5px solid rgba(50,50,50,0.3);
-  -webkit-border-radius: 6px;
+  background-color: #3da1d8;
+  -webkit-border-radius: 8px;
 }
 
 #error-modal {
