--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -105,39 +105,52 @@
 }
 
 .linkedin-form {
-  position: relative;
-  //left: 0px;
-  top: -20px;
-  height: 100%;
-  width: 400px;
+  width: 500px;
+  height: 345px;
 
   .header {
-    background-color: rgb(235,235,235);
-    //padding-bottom: 10px;
-    h2 {
-      position: relative;
-      left: 20px;
-      padding-top: 25px;
+    width: 100%;
+    height: 80px;
+    img {
+      margin-left: 20px;
+      margin-top: 20px;
     }
   }
 
-  .form {
-    margin: 25px;
-
+  .content {
+    position: relative;
+    left: 10px;
+    width: 478px;
+    height: 230px;
+    -webkit-border-radius: 4px;
+    border: 1px solid rgb(255,255,255);
     .body {
-      width: 350px;
-      height: 48px;
+      height: 130px;
+      background-color: #FFFFFF;
+
+      p {
+        padding-top: 40px;
+        padding-bottom: 50px;
+        padding-left: 30px;
+        padding-right: 25px;
+        line-height: 28px;
+        font-size: 18px;
+      }
     }
 
     .form-actions {
+      height: 100px;
       margin: 0px;
+      padding: 0px;
       background-color: rgb(235,235,235);
 
       .btn-confirm {
-       margin-left: 25px;
+        margin-top: 25px;
+        margin-left: 50px;
       }
       .btn-reject {
-       margin-left: 35px
+        margin-top: 25px;
+        margin-left: 50px
       }
     }
   }
