--- a/app/views/etkh_profiles/_linkedin_modal.html.haml
+++ b/app/views/etkh_profiles/_linkedin_modal.html.haml
@@ -1,53 +1,98 @@
 .linkedin-form
   .header
-    %h2
-      LinkedIn
-    %hr
-  .form
+    %img{ src: '/assets/linkedin-logo32.png'}
+    
+  .content
     -# if not linked with linkedin, offer link option
     - if @linkedin_signup == false
       #linking
         .body
           %p
-            Link your account with LinkedIn to allow other members to view your LinkedIn profile?
-        %hr
+            Would you like to link your account with LinkedIn so other members can view your LinkedIn profile?
 
         .form-actions
           .btn.btn-large.btn-info.btn-confirm#btn-linkedin-linking-yes
-            Yes
+            Link account
           .btn.btn-large.btn-success.btn-reject#btn-linkedin-linking-no
-            No
+            No thanks
 
     -# always offer pull data option
     #profile{ style: @linkedin_signup ? " " : "display: none" }
       .body
         %p
-          Pull profile data from your LinkedIn profile?
-      %hr
+          Would you like to pull profile data from your LinkedIn profile?
 
       .form-actions
-        = link_to "Yes", {controller: 'authentications', action: 'linkedin_getprofile'}, class: "btn btn-large btn-success btn-confirm form-close", id: "btn-linkedin-profile-yes"
-        .btn.btn-large.btn-reject.form-close#btn-linkedin-profile-no
-          No
+        = link_to "Pull profile", {controller: 'authentications', action: 'linkedin_getprofile'}, class: "btn btn-large btn-info btn-confirm form-close", id: "btn-linkedin-profile-yes"
+        .btn.btn-large.btn-success.btn-reject.form-close#btn-linkedin-profile-no
+          No thanks
 
 
 :javascript
   $(document).ready( function() {
+    // set delay time for fade in after fading out
+    var delay = 450;
+
     $("#btn-linkedin-linking-yes").click( function() {
-      var new_yes_html = "<a href='/authentications/linkedin_getprofile_and_link_account' class='btn btn-large btn-info btn-confirm form-close' id='btn-linkedin-profile-yes'>Yes</a>";
+      // fade out text and buttons 
+      fadeOut('slow');
 
-      var new_no_html = "<a href='/authentications/linkedin_signup?linking=true' class='btn btn-large btn-success btn-reject form-close' id='btn-linkedin-profile-no'>No</a>";
+      // create html for new buttons
+      var new_yes_html = "<a href='/authentications/linkedin_getprofile_and_link_account' class='btn btn-large btn-info btn-confirm form-close' id='btn-linkedin-profile-yes'>Pull profile</a>";
 
-      $("#btn-linkedin-profile-yes").replaceWith(new_yes_html);
-      $("#btn-linkedin-profile-no").replaceWith(new_no_html);
+      var new_no_html = "<a href='/authentications/linkedin_signup?linking=true' class='btn btn-large btn-success btn-reject form-close' id='btn-linkedin-profile-no'>No thanks</a>";
+      
+      // replace html of current buttons with new html, after fading out is complete
+      setTimeout( function() {
+        $("#btn-linkedin-linking-yes").replaceWith(new_yes_html);
+        $("#btn-linkedin-linking-no").replaceWith(new_no_html);
 
-      $("#linking").fadeOut('slow', function() {
-        $("#profile").fadeIn('slow');
-      });
+        // hide new buttons
+        $("#btn-linkedin-profile-yes").hide();
+        $("#btn-linkedin-profile-no").hide();
+      }, delay);
+
+      // fade in changed buttons after fading out is complete
+      setTimeout( function() {
+        fadeIn('slow');
+      }, delay);
     });
+
     $("#btn-linkedin-linking-no").click( function() {
-      $("#linking").fadeOut('slow', function() {
-        $("#profile").fadeIn('slow');
-      });
+      // fade out text and buttons
+      fadeOut('slow');
+
+      // get new text from profile text
+      var new_p_text = $("#profile").find("p").text();
+
+      // replace text and buttons html after fading out is complete
+      setTimeout( function() {
+        $("#linking").find("p").text(new_p_text);
+
+        // use hidden profile buttons to get new html
+        $("#btn-linkedin-linking-yes").replaceWith($("#btn-linkedin-profile-yes"));
+        $("#btn-linkedin-linking-no").replaceWith($("#btn-linkedin-profile-no"));
+
+        // hide new buttons
+        $("#btn-linkedin-profile-yes").hide();
+        $("#btn-linkedin-profile-no").hide();
+      }, delay);
+
+      // fade in after fading out is complete
+      setTimeout( function() {
+        fadeIn('slow');
+      }, delay);
     });
+
+    
+    function fadeOut(param)
+    {
+      $("#linking").find("p").fadeOut(param);
+      $("#linking").find(".btn").fadeOut(param);
+    }
+    function fadeIn(param)
+    {
+      $("#linking").find("p").fadeIn(param);
+      $("#linking").find(".btn").fadeIn(param);
+    }
   });
