--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -6,5 +6,15 @@
   #search-form
 
   #members-list
-    - @users_selection.users.each do |user|
-      = render partial: 'profile_teaser', locals: { user: user }
+    = render partial: 'profiles_selection'
+
+
+:javascript
+  $("#members-list").pageless({
+    totalPages: 10,
+    url: '/members',
+    //msgStyles: {'color': '#000000', 'font-size': '1em'},
+    //loaderMsg: 'Loading more results',   
+    loaderImg: '/images/load.gif',
+    distance: '2500'
+  });
