--- a/app/views/etkh_profiles/positions/create.js.erb
+++ b/app/views/etkh_profiles/positions/create.js.erb
@@ -2,5 +2,5 @@
 $("#new-position").html("");
 
 // add new position to list of positions
-var new_html = "<%= j(render partial: 'position', locals: { position: @new_position }) %>";
+var new_html = "<%= j(render partial: 'etkh_profiles/positions/position', locals: { position: @new_position }) %>";
 $("#positions").append(new_html);
