Fixed users appearing multiple times on members page

--- a/app/views/etkh_profiles/our_members.html.haml
+++ b/app/views/etkh_profiles/our_members.html.haml
@@ -6,7 +6,7 @@
   #search-form
 
   #members-list
-    = render partial: 'profiles_selection'
+    = render partial: 'profiles_selection', locals: { users: @selected_users }
 
 
 :javascript
