--- a/app/views/etkh_profiles/positions/create.js.erb
+++ b/app/views/etkh_profiles/positions/create.js.erb
@@ -1,5 +1,5 @@
 // remove add position form
-$("#new-position").html("");
+$("#position-form").html("");
 
 // add new position to list of positions
 var new_html = "<%= j(render partial: 'etkh_profiles/positions/position', locals: { position: @new_position }) %>";
