--- a/app/views/etkh_profiles/positions/new.js.erb
+++ b/app/views/etkh_profiles/positions/new.js.erb
@@ -1,7 +1,5 @@
-// add new position form to html
-
 // get new html
 var form_html = "<%= escape_javascript(render partial: 'etkh_profiles/positions/position_form_new') %>";
 
 // add to page
-$("#new-position").html(form_html);
+$("#position-form").html(form_html);
