WIP Revamped rendering of positions

--- a/app/views/etkh_profiles/_form.html.haml
+++ b/app/views/etkh_profiles/_form.html.haml
@@ -81,8 +81,7 @@
     %h2 Experience
     #positions
       - if current_user.etkh_profile.positions.any?
-        - current_user.etkh_profile.positions.each do |position|
-          = render partial: 'etkh_profiles/positions/position', locals: { position: position }
+        = render partial: 'etkh_profiles/positions/positions', locals: { positions: current_user.etkh_profile.positions }
     #position-form
       -# blank div for new position form
     = link_to "Add a position", "/positions/new", remote: true, id: "add-position"
