--- a/app/views/etkh_profiles/positions/_position.html.haml
+++ b/app/views/etkh_profiles/positions/_position.html.haml
@@ -20,5 +20,5 @@
     %p
       = str
 
-    = link_to "Edit", "/positions/" + position.id.to_s + "/edit", remote: true, class: "edit-position"
-    = link_to "Delete", "/positions/" + position.id.to_s, method: "DELETE", remote: true, class: "delete-position"
+    = link_to "Edit", "/members/#{current_user.etkh_profile.id}/positions/#{position.id.to_s}/edit", remote: true, class: "edit-position"
+    = link_to "Delete", "/members/#{current_user.etkh_profile.id}/positions/#{position.id.to_s}", method: "DELETE", remote: true, class: "delete-position"
