WIP implement ordering of positions

--- a/app/views/etkh_profiles/positions/_positions.html.haml
+++ b/app/views/etkh_profiles/positions/_positions.html.haml
@@ -1,2 +1,2 @@
-- positions.order("end_date_year DESC").each do |position|
+- Position.custom_order(positions).each do |position|
   = render partial: 'etkh_profiles/positions/position', locals: { position: position }
