--- a/app/views/etkh_profiles/_form.html.haml
+++ b/app/views/etkh_profiles/_form.html.haml
@@ -78,13 +78,14 @@
     = ep.input :donation_percentage_optout, label: "I don't want to make a declaration"
     %hr
 
-    %h2 Experience
-    #positions
-      - if current_user.etkh_profile.positions.any?
-        = render partial: 'etkh_profiles/positions/positions', locals: { positions: current_user.etkh_profile.positions }
-    #position-form
-      -# blank div for new position form
-    = link_to "Add a position", "/members/#{current_user.etkh_profile.id}/positions/new", remote: true, id: "add-position"
+    #experience
+      %h2 Experience
+      #positions
+        - if current_user.etkh_profile.positions.any?
+          = render partial: 'etkh_profiles/positions/positions', locals: { positions: current_user.etkh_profile.positions }
+      #position-form
+        -# blank div for new position form
+      = link_to "Add a position", "/members/#{current_user.etkh_profile.id}/positions/new", remote: true, id: "add-position"
 
   %h2 External websites
 
