Edited positioning of cancel button on position form

--- a/app/views/etkh_profiles/positions/_position_form.html.erb
+++ b/app/views/etkh_profiles/positions/_position_form.html.erb
@@ -26,11 +26,12 @@
 
     <div class="buttons">
       <% if edit %>
-        <button class="btn btn-success" id="btn-add-position-submit">Confirm changes</button>
+        <button class="btn btn-success" id="btn-add-position-submit">Confirm</button>
+        <button class="btn cancel" id="btn-edit-position-cancel">Cancel</button>
       <% else %>
         <button class="btn btn-success" id="btn-add-position-submit">Add position</button>
+        <button class="btn cancel" id="btn-add-position-cancel">Cancel</button>
       <% end %>
-      <button class="btn" id="btn-add-position-cancel">Cancel</button>
     </div>
   <% end %>
 </div>
