Positions list displaying correctly

--- a/app/views/etkh_profiles/positions/_positions.html.haml
+++ b/app/views/etkh_profiles/positions/_positions.html.haml
@@ -1,2 +1,5 @@
-- Position.custom_order(positions).each do |position|
-  = render partial: 'etkh_profiles/positions/position', locals: { position: position }
+#positions
+  - if !positions.nil? && !positions.empty?
+    - Position.custom_order(positions).each do |position|
+      = render partial: 'etkh_profiles/positions/position', locals: { position: position }
+  = link_to "Add a position", "/members/#{current_user.etkh_profile.id}/positions/new", remote: true, id: "add-position"
