--- a/app/views/etkh_profiles/positions/_position_form.html.erb
+++ b/app/views/etkh_profiles/positions/_position_form.html.erb
@@ -23,6 +23,7 @@
 
     <%= f.input :end_date_month, collection: months, prompt: "Month", label: "End date" %>
     <%= f.input :end_date_year, placeholder: "Year" %>
+    <%= f.input :current_position %>
 
     <div class="buttons">
       <% if edit %>
