Moved linkedin logo in assets

--- a/app/views/etkh_profiles/_linkedin_modal.html.haml
+++ b/app/views/etkh_profiles/_linkedin_modal.html.haml
@@ -1,6 +1,6 @@
 .linkedin-form
   .header
-    %img{ src: '/assets/linkedin-logo32.png'}
+    %img{ src: '/assets/linkedin/linkedin-logo32.png'}
     
   .content
     -# if not linked with linkedin, offer link option
