--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -109,68 +109,72 @@
 //********** Edit profile ***********
 
 
-#experience {
-  #positions {
-    margin-left: 7px;
+.form {
+  //margin-top: 40px;
 
-    .position {
-      margin-bottom: 20px;
-      p { margin-bottom: 0px; }
+  #experience {
+    #positions {
+      margin-left: 7px;
 
-      .title { display: inline-block; }
-      .actions {
-        display: inline-block;
-        margin-left: 20px;
-      }
-      .dates {
-        font-size: 0.8em;
+      .position {
+        margin-bottom: 20px;
+        p { margin-bottom: 0px; }
+
+        .title { display: inline-block; }
+        .actions {
+          display: inline-block;
+          margin-left: 20px;
+        }
+        .dates {
+          font-size: 0.8em;
+        }
       }
     }
-  }
 
-  #position-form {
-    .form {
-      width: 385px;
-      height: 300px;
+    #position-form {
+      .form {
+        width: 385px;
+        height: 300px;
 
-      #position_start_date_month, #position_end_date_month { width: 120px; }
-      #position_start_date_year, #position_end_date_year {
-        visibility: visible;
-        float: right;
-        width: 70px;
-      }
+        #position_start_date_month, #position_end_date_month { width: 120px; }
+        #position_start_date_year, #position_end_date_year {
+          visibility: visible;
+          float: right;
+          width: 70px;
+        }
 
-      // Move start date year up to be inline with start date month
-      .control-group:nth-child(6) { 
-        visibility: hidden;
-        position: relative;
-        top: -50px;
-      }
+        // Move start date year up to be inline with start date month
+        .control-group:nth-child(6) { 
+          visibility: hidden;
+          position: relative;
+          top: -50px;
+        }
 
-      // Also move up controls below start date to fill blank space
-      .control-group:nth-child(7) { 
-        position: relative;
-        top: -50px;
-      }
+        // Also move up controls below start date to fill blank space
+        .control-group:nth-child(7) { 
+          position: relative;
+          top: -50px;
+        }
 
-      // Move end date year to be inline with end date month
-      .control-group:nth-child(8) { 
-        visibility: hidden;
-        position: relative;
-        top: -100px;
-      }
+        // Move end date year to be inline with end date month
+        .control-group:nth-child(8) { 
+          visibility: hidden;
+          position: relative;
+          top: -100px;
+        }
 
-      .control-group:nth-child(9) { 
-        position: relative;
-        top: -100px;
-      }
+        .control-group:nth-child(9) { 
+          position: relative;
+          top: -100px;
+        }
 
-      .buttons {
-        position: relative;
-        top: -110px;
-        margin-left: 160px;
-        #btn-add-position-cancel { margin-left: 25px; }
-        #btn-edit-position-cancel { margin-left: 52px; }
+        .buttons {
+          position: relative;
+          top: -110px;
+          margin-left: 160px;
+          #btn-add-position-cancel { margin-left: 25px; }
+          #btn-edit-position-cancel { margin-left: 52px; }
+        }
       }
     }
   }
