--- a/app/views/etkh_profiles/edit.html.haml
+++ b/app/views/etkh_profiles/edit.html.haml
@@ -4,22 +4,26 @@
       .span7
         .box
           %h1= current_user.name
-          :markdown
-            ##You can now:
-            ###[Ask a question on our discussion forum](/discussion)
-            Get career advice or just find out more about 80,000 Hours. People are happy to help you out. [Ask a question here](/discussion)
+          %hr
 
-          = link_to "Pull linkedin profile data", {controller: 'authentications', action: 'linkedin_getprofile'}, remote: false, class: "btn btn-large", id: "linkedin-profile-btn"
+          #linkedin
+            #connect-account
+              - if current_user.linkedin_email.nil?
+                %p Connect your account with your LinkedIn account so other members can view your LinkedIn profile
+                = link_to image_tag('/assets/linkedin/linkedin_connect_button.gif', size: '160x31'), {controller: 'authentications', action: 'linkedin_signup', linking: true}, remote: false, id: "linkedin-connect-btn"
 
-          - if current_user.linkedin_email.nil?
-            = link_to "Link your account with linkedin", {controller: 'authentications', action: 'linkedin_signup', linking: true}, remote: false, class: "btn btn-large", id: "linkedin-btn"
+            #pull-profile
+              %p Update your profile with data from your LinkedIn profile
+              = link_to image_tag('/assets/linkedin/linkedin_button.gif'), {controller: 'authentications', action: 'linkedin_getprofile'}, remote: false, id: "linkedin-profile-btn"          
 
-          - if @new_profile == true
-            #linkedin-modal
-              = render partial: 'linkedin_modal', locals: { linkedin_signup: @linkedin_signup }
-            
-          %h2 Fill in your profile
-          = render 'form'
+            - if @new_profile == true
+              #linkedin-modal
+                = render partial: 'linkedin_modal', locals: { linkedin_signup: @linkedin_signup }
+          %hr
+          
+          .form
+            %h2 Fill in your profile
+            = render 'form'
 
       .span1
         &nbsp;
