--- a/app/assets/stylesheets/etk_profiles.css.scss
+++ b/app/assets/stylesheets/etk_profiles.css.scss
@@ -110,7 +110,11 @@
 
 
 .form {
-  //margin-top: 40px;
+  img {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-bottom: 15px;
+  }
 
   #experience {
     #positions {
